src/objects/Parts__c/Parts__c.object-meta.xml
<CustomObject>
    <label>Part</label>
    <nameField>
        <displayFormat>PART-{0}</displayFormat>
        <label>Part Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>