src/objects/Parts__c/fields/Component_Removed_Cycles__c.field-meta.xml
<CustomField>
    <fullName>Component_Removed_Cycles__c</fullName>
    <label>Component Removed (Cycles)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>