src/objects/Parts__c/fields/Component_Removed_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Component_Removed_Serial_Number__c</fullName>
    <label>Component Removed Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>