src/objects/Parts__c/fields/Other_Failed_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_Failed_Part_Number__c</fullName>
    <label>Other Failed Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>