src/objects/Parts__c/fields/Other_Failed_S_N__c.field-meta.xml
<CustomField>
    <fullName>Other_Failed_S_N__c</fullName>
    <label>Other Failed S/N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>