src/objects/Parts__c/fields/Primary_Failed_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Failed_Part_Number__c</fullName>
    <label>Primary Failed Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>