src/objects/Parts__c/fields/Primary_Failed_S_N__c.field-meta.xml
<CustomField>
    <fullName>Primary_Failed_S_N__c</fullName>
    <label>Primary Failed S/N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>