src/objects/Parts__c/fields/Primary_Part__c.field-meta.xml
<CustomField>
    <fullName>Primary_Part__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary Part</description>
    <label>Primary Part</label>
    <type>Checkbox</type>
</CustomField>