src/objects/Parts__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parts</relationshipLabel>
    <relationshipName>Parts</relationshipName>
    <type>Lookup</type>
</CustomField>